--- a/package.json
+++ b/package.json
@@ -6,21 +6,19 @@
   "author": "Julian Barrios, Juan Camilo Sanchez",
   "license": "GPL",
   "private": true,
-  "scripts":{
-        "start": "webpack --watch --config webpack.config.js"
-  },
-  "dependencies": {
-    "vue": "^2.5.16"
+  "scripts": {
+    "start": "webpack --watch --config webpack.config.js"
   },
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-plumber": "^1.2.0",
+    "gulp-sass": "^4.0.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
-    "css-loader": "^0.28.11",
     "node-sass": "^4.8.3",
     "sass": "^1.2.1",
-    "sass-loader": "^7.0.1",
-    "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15"
   }
